# study

./: .gitignore
agent/: .gitignore  README.md  main.py  pyproject.toml
agent/dev/: docker-compose.yml
agent/langchain/01-simple/: README.md  main.py
agent/langchain/02-article-gen/: README.md  app.py
agent/langchain/03-memory/: README.md
agent/langchain/04-vector/: README.md  build_db.py  config.py  init_db.py  query.py  schema.sql
agent/langchain/05-retriever/: README.md
agent/langchain/06-agent/: README.md  app.py  tools.py
agent/langgraph/01-simple/: README.md  main.py
agent/langgraph/02-qa/: README.md  app.py  build_db.py  config.py  graph.py  test_retrieval.py
agent/langgraph/03-agent/: README.md  app.py  config.py  graph.py  tools.py
agent/langservex/: README.md  __init__.py  chainlit_app.py  server.py  thinking_chain.py
agent/langsmith/01-simple/: main.py
agent/langsmith/02-offline-eval/: README.md  eval_results.md  main.py
agent/models/: __init__.py  bailian_wanxiang.py  demo_wanxiang_t2i.py
agent/skills/: README.md
agent/ui/chainlit/: chainlit_app.py
fastapi/: .env.example  .gitignore  README.md  alembic.ini  config.yaml  pyproject.toml
fastapi/alembic/: env.py  env_sync.py
fastapi/alembic/versions/: da45316908ca_initial_migration.py
fastapi/docker/: docker-compose.yaml
fastapi/docker/init-data/: init_hospital.sql
fastapi/docker/scripts/: reset_db.py
fastapi/fastapi_book/: README.md  __init__.py  main.py  utils.py
fastapi/fastapi_book/ch01/: request_async.py  request_sync.py
fastapi/misc/: .env.example  README.md  block.py  config.py  config2.py  manual_inject.py  test_func.py  tmp.json
fastapi/projects/: OAuth2Demo.md
java/: .gitignore  (+3 more)
(+560 files in other folders)
