[project]
name = "agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.12",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langgraph>=0.2.0",
    "langchain-postgres>=0.0.16",
    "psycopg[binary]>=3.1.0",
    "streamlit>=1.40.0",
    "watchdog>=6.0.0",
    "rank_bm25>=0.2.2",
    "langsmith>=0.1.0",
    "langserve[all]>=0.1.0",
    "chainlit>=1.0.0",
    "langchain-deepseek>=1.0.0",
]


[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple" 
