[project]
name = "fastapi-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "authlib>=1.6.4",
    "bcrypt==4.0.1",
    "dependency-injector>=4.48.1",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.43",
    "trio>=0.30.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "sqlacodegen>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["fastapi_book*"]
exclude = ["alembic*", "docker*", "misc*", "projects*"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
